# fixedstack-rs

./: Cargo.toml  Justfile  README.md
benches/: benchmark.rs
docs/criterion/Safe FixedStack_Pop/1024 elements/base/: benchmark.json  estimates.json  sample.json
docs/criterion/Safe FixedStack_Pop/1024 elements/new/: tukey.json
docs/criterion/Safe FixedStack_Pop/1024 elements/report/: index.html
docs/criterion/Safe FixedStack_Pop/1048576 elements/new/: benchmark.json  estimates.json  sample.json  tukey.json
docs/criterion/Safe FixedStack_Pop/1048576 elements/report/: index.html
docs/criterion/Safe FixedStack_Pop/2097152 elements/base/: benchmark.json  estimates.json  sample.json
docs/criterion/Safe FixedStack_Pop/2097152 elements/new/: tukey.json
docs/criterion/Safe FixedStack_Pop/2097152 elements/report/: index.html
docs/criterion/Safe FixedStack_Pop/524288 elements/base/: estimates.json
docs/criterion/Safe FixedStack_Pop/524288 elements/new/: benchmark.json  sample.json  tukey.json
docs/criterion/Safe FixedStack_Pop/524288 elements/report/: index.html
docs/criterion/Safe FixedStack_Pop/report/: index.html
docs/criterion/Safe FixedStack_Push/1024 elements/base/: benchmark.json
docs/criterion/Safe FixedStack_Push/report/: index.html
docs/criterion/Unsafe FixedStack_Pop/report/: index.html
docs/criterion/Unsafe FixedStack_Push/report/: index.html
docs/criterion/report/: index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_stack.rs
src/: lib.rs  stack_safe.rs  stack_unsafe.rs
(+59 files in other folders)
