[package]
name = "stack-experiments"
description = "Performance evaluation of safe vs. unsafe rust implementations"
publish = false
authors = ["Markus Mayer <widemeadows@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/sunsided/fixedstack-rs"
documentation = "https://github.com/sunsided/fixedstack-rs"
keywords = ["unsafe", "stack", "experiment"]
edition = "2021"
license = "EUPL-1.2"

[[bench]]
name = "benchmark"
path = "benches/benchmark.rs"
harness = false

[dev-dependencies]
criterion = "0.5.1"
