[package]
name = "stack-experiments-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.stack-experiments]
path = ".."

[[bin]]
name = "fuzz_stack"
path = "fuzz_targets/fuzz_stack.rs"
test = false
doc = false
bench = false
